precompiles/utils/macro/tests/precompile/compile-fail/fn-modifiers/discriminant-multiple.stderr
error: The discriminant attribute must be the only precompile attribute of a function
  --> tests/precompile/compile-fail/fn-modifiers/discriminant-multiple.rs:23:16
   |
23 |     #[precompile::discriminant]
   |                   ^^^^^^^^^^^^
